--- a/HappyHealthy/Resources/layout/activity_forget_password.axml
+++ b/HappyHealthy/Resources/layout/activity_forget_password.axml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#66f7e3bb">
+    android:background="#dfe4ea">
     <LinearLayout
         android:id="@+id/container_toolbar"
         android:layout_width="match_parent"
@@ -21,7 +21,6 @@
         android:layout_marginTop="105dp"
         android:weightSum="1"
         android:id="@+id/linearLayoutRegis"
-        android:background="@drawable/my_login"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="match_parent"
@@ -31,7 +30,7 @@
             android:textSize="25dp"
             android:textStyle="bold"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#979797"
+            android:textColor="#3a3a3a"
             android:layout_marginTop="10.0dp" />
         <LinearLayout
             android:orientation="horizontal"
@@ -60,7 +59,7 @@
             android:layout_height="45dp"
             android:id="@+id/forget_send_button"
             android:onClick="CLickLogin"
-            android:src="@drawable/Button_send_password_orange"
+            android:src="@drawable/Button_send_password"
             android:layout_marginTop="20.0dp"
             android:layout_marginBottom="20.5dp" />
     </LinearLayout>
