--- a/HappyHealthy/Resources/layout/activity_login.axml
+++ b/HappyHealthy/Resources/layout/activity_login.axml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#66f7e3bb">
+    android:background="#dfe4ea">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -12,7 +12,6 @@
         android:layout_marginTop="105dp"
         android:weightSum="1"
         android:id="@+id/linearLayoutLogin"
-        android:background="@drawable/my_login"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="match_parent"
@@ -22,7 +21,7 @@
             android:textSize="25.5dp"
             android:textStyle="bold"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#979797"
+            android:textColor="#3a3a3a"
             android:layout_marginTop="5.0dp" />
         <LinearLayout
             android:orientation="horizontal"
@@ -77,7 +76,7 @@
             android:textSize="16dp"
             android:textStyle="bold"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#979797"
+            android:textColor="#3a3a3a"
             android:layout_marginBottom="0.0dp"
             android:layout_marginRight="0.0dp"
             android:layout_marginTop="22.5dp" />
@@ -91,7 +90,7 @@
             android:textSize="16dp"
             android:textStyle="bold"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#979797"
+            android:textColor="#3a3a3a"
             android:layout_marginBottom="0.0dp"
             android:layout_marginRight="0.0dp"
             android:layout_marginTop="9.5dp" />
