--- a/HappyHealthy/Resources/layout/activity_pressure.axml
+++ b/HappyHealthy/Resources/layout/activity_pressure.axml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:weightSum="1"
-    android:background="#66f7e3bb">
+    android:background="#dfe4ea">
     <LinearLayout
         android:id="@+id/container_toolbar"
         android:layout_width="match_parent"
@@ -12,7 +12,7 @@
         android:orientation="vertical">
         <include
             android:id="@+id/toolbar"
-            layout="@layout/toolbarpre" />
+            layout="@layout/toolbarpre_history" />
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
@@ -21,7 +21,6 @@
         android:id="@+id/Layout_background_pressure"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="115dp"
-        android:background="@drawable/my_bg_pre"
         android:gravity="center_horizontal">
         <LinearLayout
             android:orientation="horizontal"
@@ -38,7 +37,7 @@
                 android:layout_centerHorizontal="true"
                 android:textSize="18dp"
                 android:textStyle="bold"
-                android:textColor="#ffffff"
+                android:textColor="#3a3a3a"
                 android:gravity="center_vertical"
                 android:layout_gravity="center_vertical" />
         </LinearLayout>
@@ -58,7 +57,7 @@
                 android:layout_centerHorizontal="true"
                 android:textSize="14dp"
                 android:textStyle="bold"
-                android:textColor="#ffffff"
+                android:textColor="#3a3a3a"
                 android:gravity="center_vertical" />
             <EditText
                 android:layout_width="126dp"
@@ -81,7 +80,7 @@
                 android:layout_centerHorizontal="true"
                 android:textSize="14dp"
                 android:textStyle="bold"
-                android:textColor="#ffffff"
+                android:textColor="#3a3a3a"
                 android:gravity="center_vertical"
                 android:layout_marginLeft="3.0dp" />
         </LinearLayout>
@@ -106,7 +105,7 @@
                 android:layout_centerHorizontal="true"
                 android:textSize="14dp"
                 android:textStyle="bold"
-                android:textColor="#ffffff"
+                android:textColor="#3a3a3a"
                 android:gravity="center_vertical" />
             <EditText
                 android:layout_width="126dp"
@@ -129,7 +128,7 @@
                 android:layout_centerHorizontal="true"
                 android:textSize="14dp"
                 android:textStyle="bold"
-                android:textColor="#ffffff"
+                android:textColor="#3a3a3a"
                 android:gravity="center_vertical"
                 android:layout_marginLeft="3.0dp" />
         </LinearLayout>
@@ -147,7 +146,7 @@
                 android:layout_centerHorizontal="true"
                 android:textSize="18dp"
                 android:textStyle="bold"
-                android:textColor="#ffffff"
+                android:textColor="#3a3a3a"
                 android:gravity="center_vertical"
                 android:layout_gravity="center_vertical" />
         </LinearLayout>
@@ -187,7 +186,7 @@
             android:layout_centerHorizontal="true"
             android:textSize="14dp"
             android:textStyle="bold"
-            android:textColor="#ffffff"
+            android:textColor="#3a3a3a"
             android:gravity="fill_horizontal"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10.0dp" />
