--- a/HappyHealthy/Resources/layout/history_pressure.axml
+++ b/HappyHealthy/Resources/layout/history_pressure.axml
@@ -29,7 +29,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="25dp"
-            android:textColor="#8e8e8e"
+            android:textColor="#3a3a3a"
             android:hint="DD-MM-YYYY  HH:MM" />
     </LinearLayout>
 </RelativeLayout>
