--- a/HappyHealthy/Resources/layout/toolbardiabetes_history.axml
+++ b/HappyHealthy/Resources/layout/toolbardiabetes_history.axml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?attr/actionBarSize"
-    android:background="#a362e2"
+    android:background="#29297c"
     local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light">
     <LinearLayout
