--- a/HappyHealthy/Resources/layout/toolbarforgetpassword.axml
+++ b/HappyHealthy/Resources/layout/toolbarforgetpassword.axml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?attr/actionBarSize"
-    android:background="#fae3ce"
+    android:background="#29297c"
     local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light">
   <LinearLayout
@@ -33,7 +33,7 @@
         android:textStyle="bold"
         android:layout_marginTop="0.0dp"
         android:layout_gravity="center_vertical"
-        android:textColor="#979797"
+        android:textColor="#ffffff"
         android:gravity="center" />
   </LinearLayout>
 </android.support.v7.widget.Toolbar>
