--- a/HappyHealthy/Resources/layout/history_doc.axml
+++ b/HappyHealthy/Resources/layout/history_doc.axml
@@ -12,6 +12,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="วันที่นัดแพทย์"
+            android:textColor="#3a3a3a"
             android:textIsSelectable="false"
             android:textSize="14dp"
             android:layout_marginLeft="70dp"
@@ -29,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="รายละเอียดการพบแพทย์"
+            android:textColor="#3a3a3a"
             android:id="@+id/docdetail"
             android:textSize="13dp"
             android:layout_marginTop="4dp"
