--- a/HappyHealthy/Resources/layout/activity_display_user.axml
+++ b/HappyHealthy/Resources/layout/activity_display_user.axml
@@ -49,7 +49,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_gravity="left">
+            android:layout_gravity="fill_horizontal"
+            android:layout_marginLeft="20dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -75,7 +76,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="left"
-            android:layout_marginTop="10.5dp">
+            android:layout_marginTop="10.5dp"
+            android:layout_marginLeft="20dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -106,7 +108,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="10.5dp"
-            android:layout_gravity="left">
+            android:layout_gravity="left"
+            android:layout_marginLeft="20dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -147,7 +150,7 @@
             android:orientation="horizontal"
             android:layout_gravity="left"
             android:layout_marginTop="19.0dp"
-            android:layout_marginLeft="0.0dp">
+            android:layout_marginLeft="20dp">
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
@@ -185,7 +188,7 @@
             android:orientation="horizontal"
             android:layout_gravity="left"
             android:layout_marginTop="12.5dp"
-            android:layout_marginLeft="0.0dp">
+            android:layout_marginLeft="20dp">
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
@@ -223,7 +226,7 @@
             android:orientation="horizontal"
             android:layout_gravity="left"
             android:layout_marginTop="9.5dp"
-            android:layout_marginLeft="0.0dp"
+            android:layout_marginLeft="20dp"
             android:id="@+id/linearLayout2">
             <ImageView
                 android:layout_width="20dp"
@@ -262,7 +265,7 @@
             android:orientation="horizontal"
             android:layout_gravity="left"
             android:layout_marginTop="9.5dp"
-            android:layout_marginLeft="0.0dp">
+            android:layout_marginLeft="20dp">
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
@@ -302,14 +305,14 @@
             android:layout_gravity="center_horizontal">
             <ImageView
                 android:id="@+id/save_button_user"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="48dp"
                 android:layout_marginLeft="0.0dp"
                 android:src="@drawable/save_button_ac_user" />
             <ImageView
                 android:id="@+id/logout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="48dp"
                 android:layout_marginLeft="10.0dp"
                 android:onClick="ClickLogout"
                 android:src="@drawable/logout_button_ac_user" />
