--- a/HappyHealthy/Resources/layout/activity_history__food.axml
+++ b/HappyHealthy/Resources/layout/activity_history__food.axml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#dfe4ea"
     tools:context="com.jiraporn.nut.happyhealthy.History_Food">
     <LinearLayout
         android:id="@+id/container_toolbar"
@@ -11,7 +12,7 @@
         android:orientation="vertical">
         <include
             android:id="@+id/toolbar"
-            layout="@layout/toolbarfood" />
+            layout="@layout/toolbarfood_list" />
     </LinearLayout>
     <ListView
         android:layout_width="fill_parent"
