--- a/HappyHealthy/Resources/layout/food_1.axml
+++ b/HappyHealthy/Resources/layout/food_1.axml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FAFFFFFF">
+    android:background="#dfe4ea">
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -12,6 +12,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Food"
+            android:textColor="#3a3a3a"
             android:textIsSelectable="false"
             android:textSize="14dp"
             android:layout_marginLeft="70dp"
@@ -20,6 +21,7 @@
         <TextView
             android:layout_height="wrap_content"
             android:text="Cal"
+            android:textColor="#3a3a3a"
             android:id="@+id/food_calories"
             android:paddingLeft="10dp"
             android:layout_marginLeft="4dp"
@@ -31,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="kcal"
+            android:textColor="#3a3a3a"
             android:id="@+id/textView"
             android:textSize="13.5dp"
             android:gravity="right"
@@ -48,6 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ต่อ"
+            android:textColor="#3a3a3a"
             android:id="@+id/textView2"
             android:textSize="12dp"
             android:layout_marginTop="4dp"
@@ -56,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="unit"
+            android:textColor="#3a3a3a"
             android:id="@+id/food_unit"
             android:textSize="11dp"
             android:layout_marginTop="4dp"
@@ -74,9 +79,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/food_detail"
+            android:textColor="#3a3a3a"
             android:textSize="11dp"
             android:layout_marginTop="8dp"
-            android:textColor="#ffa27f"
             android:textStyle="bold"
             android:layout_marginBottom="3dp" />
     </LinearLayout>
@@ -88,9 +93,3 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="5dp" />
 </RelativeLayout>
-
-
-
-
-
-
