--- a/HappyHealthy/Resources/layout/history_food.axml
+++ b/HappyHealthy/Resources/layout/history_food.axml
@@ -2,37 +2,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FAFFFFFF">
-
-
+    android:background="#dfe4ea">
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp">
-
-
         <TextView
             android:id="@+id/his_food_name"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Food"
+            android:textColor="#3a3a3a"
             android:textIsSelectable="false"
             android:textSize="14dp"
             android:layout_marginLeft="70dp"
             android:textStyle="bold"
             android:layout_marginTop="10dp" />
-
         <TextView
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:text="Cal"
             android:id="@+id/his_food_calories"
             android:paddingLeft="10dp"
+            android:textColor="#3a3a3a"
             android:layout_marginLeft="4dp"
             android:layout_marginTop="10dp"
             android:textSize="16dp"
             android:gravity="right" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,10 +36,10 @@
             android:id="@+id/textView"
             android:textSize="13.5dp"
             android:gravity="right"
+            android:textColor="#3a3a3a"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="6dp" />
     </LinearLayout>
-
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
@@ -51,7 +47,6 @@
         android:layout_marginTop="27dp"
         android:layout_marginRight="5dp"
         android:gravity="right">
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -59,28 +54,27 @@
             android:id="@+id/textView2"
             android:layout_marginLeft="200dp"
             android:textSize="12dp"
+            android:textColor="#3a3a3a"
             android:layout_marginTop="4dp"
             android:gravity="right" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/his_amount"
             android:textSize="12dp"
+            android:textColor="#3a3a3a"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="4dp" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="unit"
             android:id="@+id/his_food_unit"
+            android:textColor="#3a3a3a"
             android:textSize="12dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="4dp" />
-
     </LinearLayout>
-
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
@@ -90,7 +84,6 @@
         android:gravity="right"
         android:layout_marginRight="5dp"
         android:layout_marginBottom="2dp">
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -98,12 +91,10 @@
             android:textSize="11dp"
             android:hint="food_detail"
             android:layout_marginTop="8dp"
-            android:textColor="#ffa27f"
+            android:textColor="#3a3a3a"
             android:textStyle="bold"
             android:layout_marginBottom="3dp" />
-
     </LinearLayout>
-
     <ImageView
         android:layout_width="45dp"
         android:layout_height="50dp"
@@ -111,12 +102,4 @@
         android:src="@drawable/iconfood"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="5dp" />
-
-
 </RelativeLayout>
-
-
-
-
-
-
